tagify 라이브러리 추가

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -8,6 +8,7 @@
             href="/css/bootstrap.css"
             rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
     <style>
       .callout {
         padding: 1rem;
