--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -146,6 +146,8 @@
 <div th:replace="fragment/footer :: footer"></div>
 <div th:replace="fragment/footer :: bootstrap"></div>
 <div th:replace="fragment/footer :: toastui-editor"></div>
+<div th:replace="fragment/footer :: tagify"></div>
+<div th:replace="fragment/footer :: tagify-polyfills"></div>
 <script th:inline="javascript">
     const editor = new toastui.Editor({
         el: document.querySelector("#editor"),
