--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -7,27 +7,9 @@
         <span class="text-muted">© 2022 Company, Inc</span>
     </div>
 
-    <ul class="nav col justify-content-end list-unstyled d-flex">
-        <li class="ms-3">
-            <a class="text-muted" href="#"
-            ><svg class="bi" width="24" height="24">
-                <use xlink:href="#twitter"></use></svg
-            ></a>
-        </li>
-        <li class="ms-3">
-            <a class="text-muted" href="#"
-            ><svg class="bi" width="24" height="24">
-                <use xlink:href="#instagram"></use></svg
-            ></a>
-        </li>
-        <li class="ms-3">
-            <a class="text-muted" href="#"
-            ><svg class="bi" width="24" height="24">
-                <use xlink:href="#facebook"></use></svg
-            ></a>
-        </li>
-    </ul>
 </footer>
 <script th:fragment="bootstrap" src="/js/bootstrap.bundle.js"></script>
 <script th:fragment="toastui-editor" src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+<script th:fragment="tagify" src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
+<script th:fragment="tagify-polyfills" src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
 </html>
