서버에서 받은 값 const 변수로 받도록 수정

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -164,8 +164,8 @@
     const tooltipTrigger = document.querySelector('#tags');
     const tooltip = new bootstrap.Tooltip(tooltipTrigger);
 
-    let id = [[${post.id}]];
-    let postDescription = [[${post.description}]];
+    const id = [[${post.id}]];
+    const postDescription = [[${post.description}]];
 
 </script>
 <script src="/js/post.js"></script>
