--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -178,7 +178,7 @@
     initialValue: [[${post.content}]]
   });
 
-  let id = [[${post.id}]]
+  const id = [[${post.id}]]
   </script>
   <script src="/js/post.js"></script>
   <script>
