--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -159,7 +159,7 @@
     const tooltipTrigger = document.querySelector('#tags');
     const tooltip = new bootstrap.Tooltip(tooltipTrigger);
 
-    let memberId = [[${memberId}]];
+    const memberId = [[${memberId}]];
 </script>
 <script src="/js/post.js"></script>
 </body>
