구글, 네이버 로고 이미지파일 프로젝트에 포함

--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -165,7 +165,7 @@
                         <a href="/oauth2/authorization/google">
                             <img
                                     class="rounded-circle"
-                                    src="http://chiye1890.dothome.co.kr/img/g_logo.svg"
+                                    src="/image/g_logo.svg"
                                     width="40rem"
                                     height="40rem"
                             /></a>
@@ -174,7 +174,7 @@
                         <a href="/oauth2/authorization/naver">
                             <img
                                     class="rounded-circle"
-                                    src="http://chiye1890.dothome.co.kr/img/n_logo.png"
+                                    src="/image/n_logo.png"
                                     width="40rem"
                                     height="40rem"
                             /></a>
