--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -60,32 +60,6 @@
                     </div>
                     <div class="col-auto ms-auto">
                         <button class="btn btn-success" id="updateName" onclick="updateName()">입력</button>
-                        <!-- 토스트창 시작 -->
-                        <div class="toast-container position-fixed bottom-0 end-0 p-3">
-                            <div
-                                    id="nameToast"
-                                    class="toast"
-                                    role="alert"
-                                    aria-live="assertive"
-                                    aria-atomic="true"
-                            >
-                                <div class="toast-header">
-<!--                                    <img src="..." class="rounded me-2" alt="..." />-->
-                                    <strong class="me-auto">Boolog</strong>
-<!--                                    <small>11 mins ago</small>-->
-                                    <button
-                                            type="button"
-                                            class="btn-close"
-                                            data-bs-dismiss="toast"
-                                            aria-label="Close"
-                                    ></button>
-                                </div>
-                                <div class="toast-body">
-                                    이름 변경 완료!
-                                </div>
-                            </div>
-                        </div>
-                        <!-- 토스트창 끝 -->
                     </div>
                 </div>
             </div>
@@ -110,32 +84,6 @@
                     </div>
                     <div class="col-auto ms-auto">
                         <button class="btn btn-success" id="updateIntro" onclick="updateIntro()">입력</button>
-                        <!-- 토스트창 시작 -->
-                        <div class="toast-container position-fixed bottom-0 end-0 p-3">
-                            <div
-                                    id="introToast"
-                                    class="toast"
-                                    role="alert"
-                                    aria-live="assertive"
-                                    aria-atomic="true"
-                            >
-                                <div class="toast-header">
-                                    <!--                                    <img src="..." class="rounded me-2" alt="..." />-->
-                                    <strong class="me-auto">Boolog</strong>
-<!--                                    <small>11 mins ago</small>-->
-                                    <button
-                                            type="button"
-                                            class="btn-close"
-                                            data-bs-dismiss="toast"
-                                            aria-label="Close"
-                                    ></button>
-                                </div>
-                                <div class="toast-body">
-                                    소개글 변경 완료!
-                                </div>
-                            </div>
-                        </div>
-                        <!-- 토스트창 끝 -->
                     </div>
                 </div>
             </div>
@@ -145,6 +93,30 @@
                 <button class="btn btn-danger" onclick="withdrawal()">회원 탈퇴</button>
             </div>
         </div>
+        <!--  토스트 창   -->
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+            <div
+                    id="toast"
+                    class="toast"
+                    role="alert"
+                    aria-live="assertive"
+                    aria-atomic="true"
+            >
+                <div class="toast-header">
+                    <strong class="me-auto">Boolog</strong>
+                    <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="toast"
+                            aria-label="Close"
+                    ></button>
+                </div>
+                <div class="toast-body" id="toastResult">
+                    이름 변경 완료!
+                </div>
+            </div>
+        </div>
+        <!--   토스트 창     -->
     </div>
 
     <div th:replace="fragment/footer :: footer"></div>
