--- a/src/main/resources/templates/liked.html
+++ b/src/main/resources/templates/liked.html
@@ -69,7 +69,7 @@
 </div>
 
 <div th:if="${likedList.getTotalPages() > 0}">
-    <nav aria-label="Page navigation">
+    <nav>
         <ul
                 class="pagination justify-content-center"
                 style="
@@ -83,16 +83,26 @@
             "
         >
             <li class="page-item">
-                <a class="page-link" th:href="@{|/post/liked?page=1|}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
+                <a class="page-link" th:href="@{|/post/liked?page=1|}">
+                    <span>&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" th:href="@{|/post/liked?page=${(currentPage - 1 > 1)? currentPage - 1:1}|}">
+                    <span>&lsaquo;</span>
                 </a>
             </li>
             <li th:each="page : ${pageList}" class="page-item" th:classappend="(${currentPage} == ${page})? 'active':''">
                 <a class="page-link" th:href="@{|/post/liked?page=${page}|}" th:text="${page}"></a>
             </li>
             <li class="page-item">
-                <a class="page-link" th:href="@{|/post/liked?page=${likedList.getTotalPages()}|}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
+                <a class="page-link" th:href="@{|/post/liked?page=${(currentPage + 1 < likedList.getTotalPages())? currentPage + 1:likedList.getTotalPages()}|}">
+                    <span>&rsaquo;</span>
+                </a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" th:href="@{|/post/liked?page=${likedList.getTotalPages()}|}">
+                    <span>&raquo;</span>
                 </a>
             </li>
         </ul>
