--- a/src/main/resources/templates/recent.html
+++ b/src/main/resources/templates/recent.html
@@ -18,7 +18,6 @@
         </div>
       </div>
 
-      <!-- 인기 탭 카드뷰 -->
       <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-4 g-3">
         <div th:each="post : ${recentList}" class="col">
           <div
@@ -61,7 +60,7 @@
     </div>
 
     <div>
-      <nav aria-label="Page navigation">
+      <nav>
         <ul
                 class="pagination justify-content-center"
                 style="
@@ -75,16 +74,26 @@
             "
         >
           <li class="page-item">
-            <a class="page-link" th:href="@{|/post/recent?page=1|}" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
+            <a class="page-link" th:href="@{|/post/recent?page=1|}">
+              <span>&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" th:href="@{|/post/recent?page=${(currentPage - 1 > 1)? currentPage - 1:1}|}">
+              <span>&lsaquo;</span>
             </a>
           </li>
           <li th:each="page : ${pageList}" class="page-item" th:classappend="(${currentPage} == ${page})? 'active':''">
             <a class="page-link" th:href="@{|/post/recent?page=${page}|}" th:text="${page}"></a>
           </li>
           <li class="page-item">
-            <a class="page-link" th:href="@{|/post/recent?page=${recentList.getTotalPages()}|}" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
+            <a class="page-link" th:href="@{|/post/recent?page=${(currentPage + 1 < recentList.getTotalPages())? currentPage + 1:recentList.getTotalPages()}|}">
+              <span>&rsaquo;</span>
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" th:href="@{|/post/recent?page=${recentList.getTotalPages()}|}">
+              <span>&raquo;</span>
             </a>
           </li>
         </ul>
